# Starexx-PIP

./: LICENSE  README.md  pyproject.toml  setup.py  starexx.py  vercel.json
starexx/: __init__.py  cli.py  core.py
