[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "starexx"
version = "0.1.0"
description = "A Python module for automatic dependency management and setup."
readme = "README.md"
authors = [{ name = "Starexx", email = "help.famshot@gmail.com" }]
license = { file = "LICENSE" }
keywords = ["dependency", "automation", "starexx"]
dependencies = [
    "requests", 
    "telethon"
]

[project.urls]
Homepage = "https://github.com/starexxx/Starexx-PIP"
Repository = "https://github.com/starexxx/Starexx-PIP"

[tool.setuptools.packages.find]
where = ["."]
